puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Calendar/content/Views/Dashboard/_Calendar.cshtml.pp
@{
    ViewBag.Title = "Calendar";
    Bundles.Reference("content/custom/calendar.less", "custom");
}
<div class="span12">
    <img src="../../Content/images/calendar.PNG" />
</div>
